--- a/index.html
+++ b/index.html
@@ -110,15 +110,18 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
+        <div class="home"><p>Hello and welcome to my blog!</p>
 
-<p><img src="/statistics-blog/images/sine.gif" alt="" title="https://github.com/fastai/fastpages" /></p>
+<p><img src="/statistics-blog/images/front_gbm.gif" alt="Gradient boosting at work" title="https://github.com/fastai/fastpages" /></p>
 
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
+<p>Here I will post articles about everything I learned during my studys and update/add them whenever I learn something new. The puprose of those articles that they are a snapshot of my knowlkedge on a topic and I can look it up whenever I need it. Thats why this blog is propably more technical than your avage data science blog. Also expect to see articles on small projects I did in my free time and posts about understanding python packages. I try to illustrate the mathematics with plots and simulatiosn whenever possible.</p>
 
-<p>You can edit the <code class="highlighter-rouge">index.html</code> file to change this content.</p>
+<p>In the near future I will post articles on: LASSO, delta method, law of large numbers, CLT and I want to replicate <a href="https://lindeloev.github.io/tests-as-linear/">Common statistical tests are linear models</a> which means I will cover the most common statstical tests, more distributions and the most useful model ever, the linear model! My long term goal is to cover all basic statistical concepts plus some advanced ones and all common ML methods.</p>
+
+<p>I hope theses articles may help others in understanding statistics.</p>
 
 <h1 id="posts">Posts</h1>
+
 
 
 
