--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ image: images/logo.png
 
 Hello and welcome to my blog! 
 
-![](/images/front_gbm.gif "Gradient boosting at work")
+![]({{site.baseurl}}/images/front_gbm.gif "Gradient boosting at work")
 
 Here I will post articles about everything I learned during my studys and update/add them whenever I learn something new. The puprose of those articles that they are a snapshot of my knowlkedge on a topic and I can look it up whenever I need it. Thats why this blog is propably more technical than your avage data science blog. Also expect to see articles on small projects I did in my free time and posts about understanding python packages. I try to illustrate the mathematics with plots and simulatiosn whenever possible.
 
