deploy: afdbe2425aea7f6b26b71c0648b6cd876d39d206

--- a/index.html
+++ b/index.html
@@ -112,9 +112,10 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><p>Hello and welcome to my blog!</p>
 
-<p><img src="/images/front_gbm.gif" alt="" />
-<em>Gradient boosting at work</em>
-Here I will post articles about everything I learned during my studys and update/add them whenever I learn something new. The puprose of those articles that they are a snapshot of my knowlkedge on a topic and I can look it up whenever I need it. Thats why this blog is propably more technical than your avage data science blog. Also expect to see articles on small projects I did in my free time and posts about understanding python packages. I try to illustrate the mathematics with plots and simulatiosn whenever possible.</p>
+<p><img src="/statistics-blog/images/front_gbm.gif" alt="" title="Gradient boosting at work" />
+<em>Gradient boosting at work</em></p>
+
+<p>Here I will post articles about everything I learned during my studys and update/add them whenever I learn something new. The puprose of those articles that they are a snapshot of my knowlkedge on a topic and I can look it up whenever I need it. Thats why this blog is propably more technical than your avage data science blog. Also expect to see articles on small projects I did in my free time and posts about understanding python packages. I try to illustrate the mathematics with plots and simulatiosn whenever possible.</p>
 
 <p>In the near future I will post articles on: LASSO, delta method, law of large numbers, CLT and I want to replicate <a href="https://lindeloev.github.io/tests-as-linear/">Common statistical tests are linear models</a> which means I will cover the most common statstical tests, more distributions and the most useful model ever, the linear model! My long term goal is to cover all basic statistical concepts plus some advanced ones and all common ML methods.</p>
 
