--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@ image: images/logo.png
 
 Hello and welcome to my blog! 
 
-![]({{site.baseurl}}/images/front_gbm1.gif "Gradient boosting at work")
+![](/images/front_gbm.gif)
 *Gradient boosting at work*
 
-Here I will post articles about everything I learned during my studys and update/add them whenever I learn something new. The puprose of those articles that they are a snapshot of my knowlkedge on a topic and I can look it up whenever I need it. Thats why this blog is propably more technical than your avage data science blog. Also expect to see articles on small projects I did in my free time and posts about understanding python packages. I try to illustrate the mathematics with plots and simulatiosn whenever possible.
+Here I will post articles about everything I learned during my studys and update/add them whenever I learn something new. The puprose of those articles is that they are a snapshot of my knowlkedge on a topic at a iven time and I can look it up whenever I need it. Thats why this blog is propably more technical than your average data science blog. Also expect to see articles on small projects I did in my free time and posts about python packages. I try to illustrate the mathematics with plots and simulations whenever possible.
 
-In the near future I will post articles on: LASSO, delta method, law of large numbers, CLT and I want to replicate [Common statistical tests are linear models](https://lindeloev.github.io/tests-as-linear/) which means I will cover the most common statstical tests, more distributions and the most useful model ever, the linear model! My long term goal is to cover all basic statistical concepts plus some advanced ones and all common ML methods.
+In the near future I will post articles on: LASSO, delta method, law of large numbers, CLT and I want to replicate [Common statistical tests are linear models](https://lindeloev.github.io/tests-as-linear/) which means I will cover the most common statistical tests, more distributions and the most useful model ever, the linear model! My long term goal is to cover all basic statistical concepts plus some advanced ones and all common ML methods.
 
 I hope theses articles may help others in understanding statistics.
 
