--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ image: images/logo.png
 
 Hello and welcome to my blog! 
 
-![](/images/front_gbm.gif)
+![]({{site.baseurl}}/images/front_gbm.gif "")
 *Gradient boosting at work*
 
 Here I will post articles about everything I learned during my studys and update/add them whenever I learn something new. The puprose of those articles is that they are a snapshot of my knowlkedge on a topic at a iven time and I can look it up whenever I need it. Thats why this blog is propably more technical than your average data science blog. Also expect to see articles on small projects I did in my free time and posts about python packages. I try to illustrate the mathematics with plots and simulations whenever possible.
