--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><p>Hello and welcome to my blog!</p>
 
-<p><img src="/statistics-blog/images/front_gbm.gif" alt="" title=" " />
+<p><img src="/statistics-blog/images/front_gbm.gif" alt="" title="Gradient boosting at work" />
 <em>Gradient boosting at work</em></p>
 
 <p>Here I will post articles about everything I learned during my studys and update/add them whenever I learn something new. The puprose of those articles is that they are a snapshot of my knowlkedge on a topic at a iven time and I can look it up whenever I need it. Thats why this blog is propably more technical than your average data science blog. Also expect to see articles on small projects I did in my free time and posts about python packages. I try to illustrate the mathematics with plots and simulations whenever possible.</p>
