--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@ search_exclude: true
 image: images/logo.png
 ---
 
-Hello and welcome to my blog! 
+**Hello and welcome to my blog!**
 
 ![]({{site.baseurl}}/images/front_gbm.gif "Gradient boosting at work")
 *Gradient boosting at work*
 
-Here I will post articles about everything I learned during my studys and update/add them whenever I learn something new. The puprose of those articles is that they are a snapshot of my knowlkedge on a topic at a iven time and I can look it up whenever I need it. Thats why this blog is propably more technical than your average data science blog. Also expect to see articles on small projects I did in my free time and posts about python packages. I try to illustrate the mathematics with plots and simulations whenever possible.
+Here I will post articles about everything I learned during my studies and update/add them whenever I learn something new. The purpose of those articles is that they are a snapshot of my knowledge on a topic at a given time and I can look it up whenever I need it. This is where this blog differs from your average data science blog as it is more technical and that the articles are not just geared towards other readers but also to myself. Also expect to see articles on small projects I did in my free time and posts about python packages. I try to illustrate the mathematics with plots and simulations whenever possible.
 
-In the near future I will post articles on: LASSO, delta method, law of large numbers, CLT and I want to replicate [Common statistical tests are linear models](https://lindeloev.github.io/tests-as-linear/) which means I will cover the most common statistical tests, more distributions and the most useful model ever, the linear model! My long term goal is to cover all basic statistical concepts plus some advanced ones and all common ML methods.
+In the near future I will post articles on: LASSO, delta method, law of large numbers, CLT and I want to replicate [Common statistical tests are linear models](https://lindeloev.github.io/tests-as-linear/) which means I will cover the most common statistical tests, more distributions and the most versatile model ever, the linear model! My long term goal is to cover all basic statistical concepts plus some advanced ones and all common ML methods.
 
-I hope theses articles may help others in understanding statistics.
+I hope these articles may help others in understanding statistics.
 
 # Posts
 
