--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://christopherth.github.io/statistics-blog/about/" />
 <meta property="og:site_name" content="Statistics-Blog" />
 <script type="application/ld+json">
-{"description":"A Blog about explaining all different kinds of statistical topics.","@type":"WebSite","headline":"About Me","url":"https://christopherth.github.io/statistics-blog/about/","name":"Statistics-Blog","@context":"https://schema.org"}</script>
+{"headline":"About Me","description":"A Blog about explaining all different kinds of statistical topics.","@type":"WebSite","url":"https://christopherth.github.io/statistics-blog/about/","name":"Statistics-Blog","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/statistics-blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://christopherth.github.io/statistics-blog/feed.xml" title="Statistics-Blog" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -33,7 +33,7 @@
 <meta property="og:url" content="https://christopherth.github.io/statistics-blog/about/" />
 <meta property="og:site_name" content="Statistics-Blog" />
 <script type="application/ld+json">
-{"description":"A Blog about explaining all different kinds of statistical topics.","@type":"WebSite","headline":"About Me","url":"https://christopherth.github.io/statistics-blog/about/","name":"Statistics-Blog","@context":"https://schema.org"}</script>
+{"headline":"About Me","description":"A Blog about explaining all different kinds of statistical topics.","@type":"WebSite","url":"https://christopherth.github.io/statistics-blog/about/","name":"Statistics-Blog","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
