--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:site_name" content="Statistics-Blog" />
 <meta property="og:image" content="https://christopherth.github.io/statistics-blog/images/logo.png" />
 <script type="application/ld+json">
-{"description":"A Blog about explaining all different kinds of statistical topics.","@type":"WebSite","headline":"Statistics-Blog","url":"https://christopherth.github.io/statistics-blog/","name":"Statistics-Blog","image":"https://christopherth.github.io/statistics-blog/images/logo.png","@context":"https://schema.org"}</script>
+{"headline":"Statistics-Blog","image":"https://christopherth.github.io/statistics-blog/images/logo.png","description":"A Blog about explaining all different kinds of statistical topics.","@type":"WebSite","url":"https://christopherth.github.io/statistics-blog/","name":"Statistics-Blog","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/statistics-blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://christopherth.github.io/statistics-blog/feed.xml" title="Statistics-Blog" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -35,7 +35,7 @@
 <meta property="og:site_name" content="Statistics-Blog" />
 <meta property="og:image" content="https://christopherth.github.io/statistics-blog/images/logo.png" />
 <script type="application/ld+json">
-{"description":"A Blog about explaining all different kinds of statistical topics.","@type":"WebSite","headline":"Statistics-Blog","url":"https://christopherth.github.io/statistics-blog/","name":"Statistics-Blog","image":"https://christopherth.github.io/statistics-blog/images/logo.png","@context":"https://schema.org"}</script>
+{"headline":"Statistics-Blog","image":"https://christopherth.github.io/statistics-blog/images/logo.png","description":"A Blog about explaining all different kinds of statistical topics.","@type":"WebSite","url":"https://christopherth.github.io/statistics-blog/","name":"Statistics-Blog","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
