--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ In the near future I will post articles on: LASSO, delta method, law of large nu
 
 I hope these articles may help others in understanding statistics.
 
+Note: My strategy, for now, is to "cover some ground" as most of the time writing a post is spent in fixing typos and rearranging sections I would rather spend this time coding and thinking about statistics rather than thinking about the optimal layout. Once I devoted a post to every topic which interests me I will revisit older posts and do some cleanup work.
+
 # Posts
 
 
