--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ search_exclude: true
 image: images/logo.png
 ---
 
-**Hello and welcome to my blog!**
+**Hello, and welcome to my blog!**
 
 ![]({{site.baseurl}}/images/front_gbm.gif "Gradient boosting at work")
 *Gradient boosting at work*
@@ -14,8 +14,6 @@ Here I will post articles about everything I learned during my studies and updat
 In the near future I will post articles on: LASSO, delta method, law of large numbers, CLT and I want to replicate [Common statistical tests are linear models](https://lindeloev.github.io/tests-as-linear/) which means I will cover the most common statistical tests, more distributions and the most versatile model ever, the linear model! My long term goal is to cover all basic statistical concepts plus some advanced ones and all common ML methods.
 
 I hope these articles may help others in understanding statistics.
-
-Note: My strategy, for now, is to "cover some ground" as most of the time writing a post is spent in fixing typos and rearranging sections I would rather spend this time coding and thinking about statistics rather than thinking about the optimal layout. Once I devoted a post to every topic which interests me I will revisit older posts and do some cleanup work.
 
 # Posts
 
