--- a/index.html
+++ b/index.html
@@ -17,4 +17,6 @@ I hope these articles may help others in understanding statistics.
 
 # Posts
 
+Update 10.10.2020
+Currently I am working through Gary Kings G2001 lecture videos, the learning bayes podcast by Alexandre Andorra and the IRLS book by Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani.
 
