--- a/index.html
+++ b/index.html
@@ -117,16 +117,12 @@ window.onload = wrap_img;
 <p><img src="/statistics-blog/images/front_gbm.gif" alt="" title="Gradient boosting at work" />
 <em>Gradient boosting at work</em></p>
 
-<p>Here I will post articles about everything I learned during my studies and update/add them whenever I learn something new. The purpose of those articles is that they are a snapshot of my knowledge on a topic at a given time and I can look it up whenever I need it. This is where this blog differs from your average data science blog as it is more technical and that the articles are not just geared towards other readers but also to myself. Also expect to see articles on small projects I did in my free time and posts about python packages. I try to illustrate the mathematics with plots and simulations whenever possible.</p>
-
-<p>In the near future I will post articles on: LASSO, delta method, law of large numbers, CLT and I want to replicate <a href="https://lindeloev.github.io/tests-as-linear/">Common statistical tests are linear models</a> which means I will cover the most common statistical tests, more distributions and the most versatile model ever, the linear model! My long term goal is to cover all basic statistical concepts plus some advanced ones and all common ML methods.</p>
+<p>Here I will post articles about everything I learned during my studies and update/add them whenever I learn something new. 
+In the near future I will post articles on: LASSO, delta method, law of large numbers, CLT and I want to replicate <a href="https://lindeloev.github.io/tests-as-linear/">Common statistical tests are linear models</a> which means I will cover the most common statistical tests, more distributions and the most versatile model ever, the linear model! My long term goal is to cover all basic statistical concepts plus some advanced ones and all common ML methods.</p>
 
 <p>I hope these articles may help others in understanding statistics.</p>
 
 <h1 id="posts">Posts</h1>
-
-<p>Update 10.10.2020
-Currently I am working through Gary Kings G2001 lecture videos, the learning bayes podcast by Alexandre Andorra and the IRLS book by Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani.</p>
 
 
 
